# df-test-bot

./: .env  .gitignore  Makefile  README.md  api.py  app.py  pyproject.toml  readme.md  sqs.py  template.yaml  test_sqs.py
src/: api.py  requirements.txt  sqs.py  tests.py
tests/: test_api.py  test_sqs.py
